# Fixly

./: .gitignore  pyproject.toml
api/: api_router.py  models.py
api/private/: __init__.py  product.py  profile.py
api/public/: auth.py
app/: main.py
app/core/: config.py  jwt.py  password_hash.py
